Configurable client port for web interface

--- a/client/config.json
+++ b/client/config.json
@@ -1,4 +1,5 @@
 {
     "redisEndpoint": "redis://:<KEY>@<URL>:<PORT>",
-    "telegramToken": "<TOKEN>"
+    "telegramToken": "<TOKEN>",
+    "port": 8080
 }
